fix: fix password visibility

--- a/src/assets/css/_registration.scss
+++ b/src/assets/css/_registration.scss
@@ -22,6 +22,7 @@
       height: 30px;
    }
    &-input {
+      padding: 1px 10px;
       display: block;
       width: 46%;
       height: 30px;
@@ -51,10 +52,11 @@
    margin: 25px 10px 15px 0;
 }
 .password-control {
+   display: block;
 	position: absolute;
+   cursor: pointer;
 	top: 4px;
 	right: 6px;
-	display: inline-block;
 	width: 25px;
 	height: 25px;
 	background: url(https://snipp.ru/demo/495/view.svg) 0 0 no-repeat;
